@@ -43,9 +43,33 @@ Finally, you'll need to update your web server as necessary. The CPAN Testers
 Blog runs under Apache2, and the vhost file, ./vhosts.conf, can be adapted as
 appropriate for other web servers applications.
 
+CPAN TESTERS FUND
+
+CPAN Testers wouldn't exist without the help and support of the Perl 
+community. However, since 2008 CPAN Testers has grown far beyond the 
+expectations of it's original creators. As a consequence it now requires
+considerable funding to help support the infrastructure.
+
+In early 2012 the Enlightened Perl Organisation very kindly set-up a
+CPAN Testers Fund within their donatation structure, to help the project
+cover the costs of servers and services.
+
+If you would like to donate to the CPAN Testers Fund, please follow the link
+below to the Enlightened Perl Organisation's donation site.
+
+https://members.enlightenedperl.org/drupal/donate-cpan-testers
+
+If your company would like to support us, you can donate financially via the
+fund link above, or if you have servers or services that we might use, please
+send an email to admin@cpantesters.org with details.
+
+Our full list of current sponsors can be found at our I <3 CPAN Testers site.
+
+http://iheart.cpantesters.org
+
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2008-2013 Barbie for Miss Barbell Productions.
+Copyright (C) 2008-2014 Barbie for Miss Barbell Productions.
 
 This distribution is free software; you can redistribute it and/or modify it 
 under the Artistic License v2.
