@@ -2,6 +2,7 @@ Changes for the CPAN Testers Blog website
 =========================================
 
         - fixed license fields in META.json to be lists.
+        - added documentation about the CPAN Testers Fund.
 
 1.08    2014-05-23
         - upgrade to Labyrinth-5.21.
